Fixed blurry rendering issue on switch component + android.

--- a/css-components/components-src/stylus/components/switch.styl
+++ b/css-components/components-src/stylus/components/switch.styl
@@ -27,14 +27,10 @@ var-switch-thumb-background-color := #fff
 var-swtich-thumb-border-color := #ddd
 var-swtich-thumb-border-color-active := #4CD964
 
-var-transition--switch__label = background-color 0.5s cubic-bezier(0.5,1.3,0.5,1)
-var-transition--switch__label--checked = background-color 0.5s cubic-bezier(0.5,1.6,0.5,1)
 var-height--switch = 32px
 var-width--switch = 51px
 var-switch--border-radius = 30px
 var-transition--switch__toggle = all 0.35s cubic-bezier(0.5,1.6,0.5,1)
-var-box-shadow--switch__label--before--checked = inset 0 0 0 0px rgba(0,0,0,0.4)
-var-box-shadow--switch__label--before = inset 0 0 0 0px rgba(0,0,0,0.1)
 
 /*! topdoc
   name: Switch
@@ -71,18 +67,6 @@ switch__toggle()
   reset-base()
   reset-cursor()
 
-switch__toggle--before()
-  content ''
-  position absolute
-  z-index -1
-  reset-box-model()
-
-switch__toggle--after()
-  content ''
-  position absolute
-  z-index -1
-  reset-box-model()
-
 switch--disabled()
   disabled()
 
@@ -106,6 +90,18 @@ switch--disabled()
   top 0px
   left 0px
 
+// switch toggle background
+.switch__toggle
+  background-color var-switch-background-color
+  width 50px
+  position absolute
+  z-index 0
+  top 0px
+  left 0px
+  border-radius 30px
+  height 32px
+  transition var-transition--switch__toggle !important
+
 // switch toggle circle
 .switch__toggle:before
   position absolute
@@ -114,47 +110,23 @@ switch--disabled()
   height 28px
   width 28px
   background-color var-switch-thumb-background-color
-  border 1px solid var-swtich-thumb-border-color
-  left 0
-  top 1px
-  transition var-transition--switch__toggle
+  border none
+  left 2px
+  top 2px
+  reset-box-model()
+  transition var-transition--switch__toggle !important
 
-// switch toggle background
-.switch__toggle
-  background-color var-switch-background-color
-  width 50px
-  position absolute
-  top 0px
-  left 0px
-  border-radius 30px
-  height 32px
+.switch__input:checked + .switch__toggle
+  background-color var-background-color--switch__label--checked
 
 .switch__input + .switch__toggle:before
   margin-left 0px
 
 .switch__input:checked + .switch__toggle:before
   margin-left 0px
-  transform translate3d(19px, 0px, 0px)
+  transform translateX(18px)
   border-color var-swtich-thumb-border-color-active
 
-.switch__input:active + .switch__toggle
-  border none
-
-.switch__input:focus + .switch__toggle
-  border none
-
-.switch__input:disabled + .switch__toggle
-  switch--disabled()
-
-.switch__input:checked + .switch__toggle
-  background-color var-background-color--switch__label--checked
-  box-shadow var-box-shadow--switch__label--before--checked
-  transition var-transition--switch__label--checked
-
-.switch__input:not(:checked) + .switch__toggle
-  box-shadow var-box-shadow--switch__label--before
-  transition var-transition--switch__label
-
 .switch__input:not(:checked) + .switch__toggle:before
-  transform translate3d(1px, 0px, 0px)
+  transform translateX(0px)
 
